--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -563,6 +563,15 @@
     "category_preview_description": {
         "message": "QuickreativK recap of previous episodes, or a preview of what's coming up later in the current video. Meant for edited together clips, not for spokreativKen summaries."
     },
+    "category_filler": {
+        "message": "Filler Tangent"
+    },
+    "category_filler_description": {
+        "message": "Tangential scenes added only for filler or humor that are not required to understand the main content of the video. This should not include segments providing context or backreativKground details."
+    },
+    "category_filler_short": {
+        "message": "Filler"
+    },
     "category_music_offtopic": {
         "message": "Music: Non-Music Section"
     },
